Fix level 3 mega menu link alignment

--- a/assets/component-mega-menu.css
+++ b/assets/component-mega-menu.css
@@ -56,6 +56,9 @@
   font-family: "Museo Sans 500";
   text-align: left;
 }
+.mega-menu__link--level-3 {
+  text-align: left;
+}
 
 .header--top-center .mega-menu__list {
   display: flex;
